import 'package:flutter/material.dart';
import 'package:swifty_chat/swifty_chat.dart';
import 'package:swifty_chat_mocked_data/swifty_chat_mocked_data.dart';

class BasicChat extends StatefulWidget {
  const BasicChat({super.key});

  @override
  // ignore: library_private_types_in_public_api
  _BasicChatState createState() => _BasicChatState();
}

class _BasicChatState extends State<BasicChat> {
  final List<MockMessage> _messages = [];
  final ChatController _chatController = ChatController();

  @override
  void initState() {
    super.initState();
    _messages.addAll(generateRandomTextMessages());
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Basic Chat')),
      body: _chatWidget(context),
    );
  }

  Chat _chatWidget(BuildContext context) => Chat(
    controller: _chatController,
    theme: const DarkChatTheme(),
    messages: _messages,
    chatMessageInputField: MessageInputField(
      key: const Key('message_input_field'),
      sendButtonTapped: (msg) {
        debugPrint(msg);
        setState(() {
          final message = MockMessage(
            date: DateTime.now(),
            user: MockChatUser.outgoingUser,
            id: DateTime.now().toString(),
            isMe: true,
            messageKind: MessageKind.text(msg),
          );
          _messages.insert(0, message);
          _chatController.scrollToBottom();
        });
      },
    ),
  );
}
